...
            <TextView
                android:text="@string/date_input_invitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/aei_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/hint_enter_date"
                android:onClick="pickADate"
...
                android:text="@string/friends_input_invitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/aei_edit_friends"
                android:completionThreshold="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords|textMultiLine"
                android:hint="@string/hint_enter_friends"
                android:ems="10"
...
