<resources>
    <!--    «\u0020» is for space at the beginning or end of line-->
    <string name="app_name">Friends</string>
    <string name="interactions_journal">Interactions journal</string>
    <string name="label_settings">Options</string>
    <string name="friends">Friends</string>
    <string name="add_interaction">Add Interaction</string>
    <string name="type_input_invitation">Type:</string>
    <string name="date_input_invitation">Date:</string>
    <string name="hint_enter_date">Enter date</string>
    <string name="friends_input_invitation">Friends:</string>
    <string name="hint_enter_friends">Enter friend names</string>
    <string name="comment_input_invitation">Notes:</string>
    <string name="hint_interaction_comment">Describe interaction</string>
    <string name="last_interactions">Last Interactions</string>
    <string name="edit_selection">Edit</string>
    <string name="delete_selection">Delete</string>
    <string name="add_friend">New friend</string>
    <string name="action_bar_title_edit_friend">Edit </string>
    <string name="icon_title_save">Save</string>
    <string name="import_database">Import data</string>
    <string name="export_database">Export data</string>
    <string name="add_new_interaction_type">Add new...</string>
    <string name="type_of_interaction">Type of interaction</string>
    <string name="frequency_of_interaction">Frequency of interaction in days</string>
    <string name="manage_interaction_types">Interaction types</string>

    <string name="title_activity_interaction_types">Interaction types</string>
    <string name="add">Add</string>
    <string name="friend_name">Friend name</string>
    <string name="notes">Notes:</string>
    <string name="name">Name:</string>
    <string name="set_date_future_warning">Can\'t interact in the future</string>

    <string name="toast_warning_fill_date">Fill date!</string>
    <string name="toast_warning_fill_friends">Fill friends!</string>
    <string name="toast_warning_empty_name">Empty name!</string>
    <string name="toast_warning_friend_exists">Friend with name like that already exists!</string>
    <string name="toast_warning_type_exists">Type already exists!</string>
    <string name="toast_warning_empty_frequency">Empty frequency!</string>

    <string name="toast_notice_interaction_saved">Interaction saved</string>
    <string name="toast_notice_export_succeeded">Export succeeded</string>
    <string name="toast_notice_import_succeeded">Import succeeded</string>
    <string name="toast_notice_import_failed">Import failed</string>
    <string name="toast_notice_export_failed">Export failed</string>
    <string name="toast_notice_type_created">Type created</string>
    <string name="toast_notice_friend_created">\u0020is created</string>
    <string name="toast_notice_friend_forgotten">\u0020is forgotten</string>
    <string name="toast_notice_friend_deleted">\u0020deleted</string>
    <string name="toast_notice_friend_updated">\u0020updated</string>
    <string name="toast_notice_interactions_deleted">Interactions deleted</string>
    <string name="interaction_type_name_meeting">Meeting</string>
    <string name="interaction_type_name_texting">Texting</string>
    <string name="interaction_type_name_call">Call</string>
    <string name="edit_interaction">Edit interaction</string>
    <string name="days_ago">%d d. ago</string>
    <string name="per_days">per %d d.</string>
    <string name="new_interaction_type">New interaction type</string>
    <string name="edit_interaction_type">Edit interaction type</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="dont_have_such_friend">You don\'t have friend named «%s»</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="forget">Forget</string>
    <string name="edit_name">Edit name</string>
    <string name="export_in_progress">Export in progress</string>
    <string name="import_in_progress">Import in progress</string>
    <string name="friends_deleted">Friends deleted</string>
    <string name="type_updated">Type updated</string>
    <string name="horizontal_divider_dot" translatable="false">\u0020•\u0020</string>

    <string name="show_hidden_trackers">Show hidden entries</string>

    <string name="fi_no_data">You have no interactions yet</string>
    <string name="fli_no_data">You have no interaction types.\n\nAdd them in «Interaction types» menu or restart an app.</string>
    <string name="flit_no_data">You have no active interactions of this type.\n\nYou can add some via plus icon.\n\nYou don\'t need to add friends beforehand, that can be done inside «Add Interaction» option</string>
    <string name="ff_no_data">You have no friends yet</string>
    <string name="ait_no_data">You have no interaction types</string>

    <string name="changelog_dialog_title">Update %1$s</string>
    <string name="changelog_bug_prefix" translatable="false">[font color="#FF0000"][b]! [/b][/font]</string>
    <string name="changelog_bug_improvement" translatable="false">[font color="#009933"][b]+ [/b][/font]</string>
    <string name="alert_dialog_delete_all_types_notice">This will also delete all interactions of selected types.</string>
    <string name="alert_dialog_types_to_be_deleted">\n\nTypes to be deleted:\n</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="alert_dialog_delete_all_friends_notice">This will also change multi-person interactions and delete solo interactions of selected friends.</string>
    <string name="alert_dialog_friends_to_be_deleted">\n\nFriends to be deleted:\n</string>
    <string name="LI_every_x_days">every %d d.</string>
    <string name="no_description">No notes</string>
    <string name="with">+\u0020</string>
    <string name="new_frequency">New Frequency</string>
    <string name="edit_frequency">Edit frequency</string>
    <string name="current_frequency_type_friend">Current frequency of %s with %s is %d d.</string>
    <string name="frequency_cant_be_zero">Frequency can\'t be zero</string>
    <string name="unknown_error_in_frequecny">Unknown error in frequency</string>
    <string name="frequency_cant_be_that_long">Frequency can\'t be longer nine symbols</string>
    <string name="share_interactions">Share interactions</string>
    <string name="night_mode">Night mode</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="appearance">Appearance</string>
    <string name="data_management">Data management</string>
    <string name="show_hidden_trackers_summary">Show hidden trackers in Last Interactions.</string>
    <string name="export_summary">Create a file with all your data. This file can be imported back.</string>
    <string name="import_summary">Load data from file to app. Old app data will be wiped. Works only with files exported from this app.</string>
    <string name="preference_night_mode" translatable="false">preference_night_mode</string>
    <string name="preference_show_hidden_trackers" translatable="false">preference_show_hidden_trackers</string>
    <string name="preference_export" translatable="false">preference_export</string>
    <string name="preference_import" translatable="false">preference_import</string>

</resources>
