<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/ms_save"
        android:title="@string/icon_title_save"
        android:icon="@drawable/ic_save_24dp"
        app:showAsAction="always"
        />

</menu>