...
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="5dp"
    style="@style/card"
    >

    <com.trulden.friends.view.FadebleRelativeLayout
        android:id="@+id/eli_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        >

        <TextView
...
