...

            <TextView
                android:id="@+id/log_entry_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@id/log_entry_names"
                tools:text="Meeting"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal_divider_dot"
...
